--- a/app/src/main/res/drawable/bg_dialog_bottom_left_btn.xml
+++ b/app/src/main/res/drawable/bg_dialog_bottom_left_btn.xml
@@ -9,7 +9,7 @@
     <item android:state_pressed="false">
         <shape android:shape="rectangle">
             <corners android:bottomLeftRadius="10.0dip" />
-            <solid android:color="#ffffffff" />
+            <solid android:color="#ffaabb" />
         </shape>
     </item>
 </selector>
