--- a/app/src/main/res/layout/plugin_layout.xml
+++ b/app/src/main/res/layout/plugin_layout.xml
@@ -2,29 +2,29 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/bg_game_dialog"
     android:orientation="vertical">
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginLeft="1dp"
-        android:layout_marginTop="1dp"
-        android:layout_marginRight="1dp"
-        android:layout_weight="7"
-        android:background="#bbffee"
-        android:gravity="center"
-        android:text="@string/plugin_title"
-        android:textColor="@color/orange"
-        android:textSize="25dp" />
+    <!--<TextView-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="match_parent"-->
+        <!--android:layout_marginLeft="1dp"-->
+        <!--android:layout_marginTop="1dp"-->
+        <!--android:layout_marginRight="1dp"-->
+        <!--android:layout_weight="7"-->
+        <!--android:background="#bbffee"-->
+        <!--android:gravity="center"-->
+        <!--android:text="@string/plugin_title"-->
+        <!--android:textColor="@color/orange"-->
+        <!--android:textSize="20dp" />-->
 
     <ListView
         android:id="@+id/id_plugin_list_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_margin="5dp"
-        android:layout_marginTop="5dp"
+        android:layout_margin="1dp"
+        android:layout_marginTop="1dp"
         android:layout_weight="1"
-        android:background="@color/general_background"
         android:dividerHeight="4dp"></ListView>
 
 </LinearLayout>
